--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <title> Jenkins CI/CD Pipline </title>
 <body>
+
 <h1>Welcome to intellipat </h1>
+<h2> this is my first code </h2>
 </body>
 </html>
 
